--- a/server/build.gradle
+++ b/server/build.gradle
@@ -128,6 +128,11 @@ dependencies {
 
   // kafka
   api "org.apache.kafka:kafka-clients:2.8.2"
+  // test
+//  api "org.testcontainers:testcontainers:1.20.3"
+  // api "org.testcontainers:kafka-1.20.3"
+  testImplementation "org.testcontainers:testcontainers:1.20.3"
+  testImplementation 'org.testcontainers:kafka:1.20.3'
 
   // https://mvnrepository.com/artifact/org.roaringbitmap/RoaringBitmap
   implementation 'org.roaringbitmap:RoaringBitmap:1.3.0'
