--- a/server/build.gradle
+++ b/server/build.gradle
@@ -127,7 +127,10 @@ dependencies {
   api "jakarta.annotation:jakarta.annotation-api:${versions.jakarta_annotation}"
 
   // kafka
-  api "org.apache.kafka:kafka-clients:2.8.2"
+  api "org.slf4j:slf4j-api:${versions.slf4j}"
+  implementation "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
+  api "org.apache.kafka:kafka-clients:3.9.0"
+
   // test
 //  api "org.testcontainers:testcontainers:1.20.3"
   // api "org.testcontainers:kafka-1.20.3"
@@ -359,7 +362,7 @@ tasks.named("thirdPartyAudit").configure {
             'jdk.incubator.vector.ShortVector',
             'jdk.incubator.vector.Vector',
             'jdk.incubator.vector.VectorOperators',
-            'jdk.incubator.vector.VectorSpecies'
+            'jdk.incubator.vector.VectorSpecies',
         ]
     )
     ignoreViolations(
