--- a/settings.gradle
+++ b/settings.gradle
@@ -154,3 +154,6 @@ if (extraProjects.exists()) {
     addSubProjects('', extraProjectDir)
   }
 }
+include 'plugins:ingestion-kafka'
+findProject(':plugins:ingestion-kafka')?.name = 'ingestion-kafka'
+
