--- a/server/build.gradle
+++ b/server/build.gradle
@@ -128,7 +128,7 @@ dependencies {
 
   // https://mvnrepository.com/artifact/org.roaringbitmap/RoaringBitmap
   implementation 'org.roaringbitmap:RoaringBitmap:1.3.0'
-
+  testImplementation 'org.awaitility:awaitility:4.2.0'
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
     exclude group: 'org.opensearch', module: 'server'
